2018-06-20  6.9.10-3 Cristy  <quetzlzacatenango@image...>
  * Fix potential memory leak in raw image decoders (reference
    https://github.com/ImageMagick/ImageMagick/issues/117).

2018-06-18  6.9.10-2 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-2, GIT revision 13604:bca07e94b:20180618.

2018-06-18  6.9.10-2 Cristy  <quetzlzacatenango@image...>
  * More rovust SVG text handling.

2018-06-16  6.9.10-1 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-1, GIT revision 13595:dafb03062:20180616.

2018-06-16  6.9.10-1 Cristy  <quetzlzacatenango@image...>
  * Fixed numerous use of uninitialized values, integer overflow, memory
    exceeded, and timeouts (credit to OSS Fuzz).
  * Fixed an issue with stroke and label: (reference
    https://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=34142).

2018-06-12  6.9.10-0 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-0, GIT revision 13585:82d7dbe0b:20180612.

2018-06-11  6.9.10-0 Cristy  <quetzlzacatenango@image...>
  * Fixed numerous use of uninitialized values, integer overflow, memory
    exceeded, and timeouts (credit to OSS Fuzz).

2018-06-11  6.9.9-51 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.9-51, GIT revision 13574:a58324488:20180611.

2018-06-06  6.9.9-51 Cristy  <quetzlzacatenango@image...>
  * Fixed numerous use of uninitialized values, integer overflow, memory
    exceeded, and timeouts (credit to OSS Fuzz).

2018-06-02  6.9.9-50 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.9-50, GIT revision 13539:2ae91d95c:20180602.

2018-05-30  6.9.9-50 Cristy  <quetzlzacatenango@image...>
  * Heap buffer overflow fix (reference
    https://github.com/ImageMagick/ImageMagick/issues/1156).
  * Fixed numerous use of uninitialized values, integer overflow, memory
    exceeded, and timeouts (credit to OSS Fuzz).

2018-05-29  6.9.9-49 Cristy  <quetzlzacatenango@image...>